Yeni güncellemeler. Kritik olabilir.

--- a/content/dergi/sayi-10/coca-cola/index.html
+++ b/content/dergi/sayi-10/coca-cola/index.html
@@ -23,7 +23,7 @@ tags= ["dergi", "ikonik"]
             olduğunu tanıyabiliyoruz.
          </p>
          <p>
-            <strong>Esra Gülmen</strong>&#39;in bu eserinde bize hissettirdiği
+            Esra Gülmen&#39;in bu eserinde bize hissettirdiği
             gibi. Sadece logonun şekli deforme edilerek konulmuş bu eserde,
             gözümüz şişeyi tamamlıyor.
          </p>
@@ -113,7 +113,7 @@ tags= ["dergi", "ikonik"]
       Başlangıçta diğer alkolsüz içecekler gibi şişelenmiş olan Coca Cola
       içeceğinin taklitçilerinden ve rekabetten sıyrılmasına yardımcı olacak
       özel bir kaba ihtiyaçlarının olduğunu fark etmişti. Bunun üzerine Coca
-      Cola Company &#39;&#39;ayıt edici bir ambalaj&#39;&#39; çalışması için iyi
+      Cola Company &#39;&#39;ayırt edici bir ambalaj&#39;&#39; çalışması için iyi
       bir ödenek oluşturup, ABD genelinde bir çok cam şirketinin katıldığı bir
       ulusal yarışma başlattı.
    </p>
@@ -127,10 +127,10 @@ tags= ["dergi", "ikonik"]
       </div>
       <div class="col-md-6">
          <p>
-            <strong>Root Glass Şirketi</strong>, briefi aldı ve tasarımları
-            üzerinde çalışmaya başladı. Root ekibi <strong>C.J</strong> ve
-            <strong>William Root</strong>, <strong>Alexander Samuelson</strong>,
-            <strong>Earl Dean</strong> ve <strong>Clyde Edwards</strong>&#39;tan
+            Root Glass Şirketi, briefi aldı ve tasarımları
+            üzerinde çalışmaya başladı. Root ekibi C.J ve
+            William Root, Alexander Samuelson,
+            Earl Dean ve Clyde Edwards&#39;tan
             oluşuyordu. Hikayeye göre ekip üyelerinin tasarım olanaklarını
             araştırmak için gittikleri yerel bir kütüphanede,
             <em>&#39;&#39;koka&#39;&#39;</em> kelimesini sözlükte ararken
@@ -156,7 +156,7 @@ tags= ["dergi", "ikonik"]
       kalıplanması onaylandı. Bir prototip yapıldı ve şişe Kasım 1915&#39;te bir
       patent aldı. Prototip aslında hiçbir zaman üretime geçmedi çünkü orta çapı
       tabanından daha büyüktü, bu da onu konveyör bantlarında dengesiz hale
-      getiriyordu. <strong>Dean</strong> bu sorunu şişenin orta çapını
+      getiriyordu. Dean bu sorunu şişenin orta çapını
       küçülterek çözdü ve bugünkü kontur şekli doğdu.
    </p>
    <div class="row">
@@ -207,7 +207,7 @@ tags= ["dergi", "ikonik"]
       <div class="col-md-6">
          <p>
             Yapılan araştırmalara göre dünyada en çok kullanılan kelimelerden
-            biri Coca Cola‘ dır. Coca Cola sadece kendini bir içecek olarak
+            biri Coca Cola'dır. Coca Cola sadece kendini bir içecek olarak
             konumlandırmamış ayrıca baskın bir kültürün diğerleri üzerindeki
             etkisini de anlatmıştır.
          </p>
