--- a/content/dergi/sayi-12/roportaj/index.html
+++ b/content/dergi/sayi-12/roportaj/index.html
@@ -38,11 +38,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row mt-3 pt-3 mb-0">
                <div class="col-md-4">
-                  {{<img
-                     src="istanbul-teknik-universitesi-logosu.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/istanbul-teknik-universitesi-logosu.jpg"
                      alt=""
                      height="120px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8 pt-3">
                   <p>
@@ -263,11 +263,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-2 mb-3">
                <div class="col-md-4">
-                  {{<img
-                     src="istanbul-ticaret-universitesi-logo.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/istanbul-ticaret-universitesi-logo.jpg"
                      alt=""
                      height="125px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8 pt-4">
                   <p>
@@ -465,11 +465,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-3 mb-3">
                <div class="col-md-4">
-                  {{<img
-                     src="eskisehir-teknik-universitesi-logo.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/eskisehir-teknik-universitesi-logo.jpg"
                      alt=""
                      height="120px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8">
                   <p>
@@ -711,11 +711,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-3 mb-2">
                <div class="col-md-4">
-                  {{<img
-                     src="ondokuz-mayis-universitesi-logo.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/ondokuz-mayis-universitesi-logo.jpg"
                      alt=""
                      height="120px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8">
                   <p>
@@ -939,11 +939,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-1 mb-3">
                <div class="col-md-4">
-                  {{<img
-                     src="orta-dogu-teknik-universitesi-logo.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/orta-dogu-teknik-universitesi-logo.jpg"
                      alt=""
                      height="120px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8">
                   <br>
@@ -1209,11 +1209,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-1 mb-2">
                <div class="col-md-4">
-                  {{<img
-                     src="mimar-sinan-guzel-sanatlar-universitesi-logo.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/mimar-sinan-guzel-sanatlar-universitesi-logo.jpg"
                      alt=""
                      height="120px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8">
                   <p>
@@ -1433,11 +1433,11 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-2 mb-2">
                <div class="col-md-4">
-                  {{<img
-                     src="selcuk-universitesi-logo.jpg"
+                  <img class="rounded"
+                     src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/selcuk-universitesi-logo.jpg"
                      alt=""
                      height="120px"
-                 >}}
+                 >
                </div>
                <div class="col-md-8 pt-3">
                   <p>
@@ -1605,7 +1605,7 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-2 mb-3">
                <div class="col-md-4">
-                  {{<img src="marmara-universitesi-logo.jpg" alt="">}}
+                  <img class="rounded" src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/marmara-universitesi-logo.jpg" alt="">
                </div>
                <div class="col-md-8 pt-4">
                   <p>
@@ -1700,14 +1700,12 @@ tags= ["ana sayfa", "dergi", "roportaj"]
                            mi bilgisayar destekli mi ilerliyor?</strong
                         >
                      </p>
-                     <ol start="2">
-                        <li>
-                           sınıfta alınan dijital görselleştirme dersi ile ilk
+                     <p>
+                           2. sınıfta alınan dijital görselleştirme dersi ile ilk
                            bilgisayarlı dersler başlar. 3. sınıfta 3D modelleme
                            dersi almaya başlar ve projelerimizde modelleme
                            kullanmaya başlarız.
-                        </li>
-                     </ol>
+                     </p>
                   </li>
                   <li>
                      <p>
@@ -1815,7 +1813,7 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-3 mb-3">
                <div class="col-md-4">
-                  {{<img src="dogus-universitesi-logo.jpg" alt="">}}
+                  <img class="rounded" src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/dogus-universitesi-logo.jpg" alt="">
                </div>
                <div class="col-md-8 pt-3">
                   <p>
@@ -2069,7 +2067,7 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-3 mb-3">
                <div class="col-md-4">
-                  {{<img src="karabuk-universitesi-logo.jpg" alt="">}}
+                  <img class="rounded" src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/karabuk-universitesi-logo.jpg" alt="">
                </div>
                <div class="col-md-8 pt-3">
                   <p>
@@ -2261,7 +2259,7 @@ tags= ["ana sayfa", "dergi", "roportaj"]
          >
             <div class="row pt-2 mb-2">
                <div class="col-md-4">
-                  {{<img src="atilim-universitesi-logo.jpg" alt="">}}
+                  <img class="rounded" src="https://www.markut.net/sayi-12/endustriyel-tasarim-bolumu-roportaj/atilim-universitesi-logo.jpg" alt="">
                </div>
                <div class="col-md-8 pt-4">
                   <p>
