--- a/content/dergi/sayi-3/sayi-3-bauhaus-ekolu.html
+++ b/content/dergi/sayi-3/sayi-3-bauhaus-ekolu.html
@@ -1,6 +1,9 @@
 +++
 title = "Bauhaus Ekolüne Bakış"
-url = "sayi-3/bauhaus-tasarim-okulu-ekolu/"
+url = "sayi-15/bauhaus-tasarim-ekolu/"
+aliases = [
+    "/sayi-3/bauhaus-tasarim-okulu-ekolu/"
+]
 date = "2020-11-01"
 seotitle = "Bauhaus Tasarım Okulu Kuruluşu - Bauhaus Ekolü"
 description="Bauhaus ekolü nedir? Bauhaus ve endüstriyel tasarım. Bauhaus akımının etkileri. Yanlızca bir fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar..."
@@ -10,7 +13,7 @@ sayi=[
 "03"
 ]
 sayfa="01"
-yazar=["atahan gokturk"]
+yazar=["atahan gokturk","goksu gokturk"]
 type="sayfa"
 tags= [
 "dergi", "bauhaus", "sanat akimi"
@@ -18,17 +21,37 @@ tags= [
 +++
 
 <div class="text-center">
-  <img loading="lazy" class="slb" src="/img/Bauhaus-Costume.jpg" alt="" />
+  <div
+  style="
+     background-image: url('/img/bauhaus-triadisches-ballet-costume.jpg'); height: 100vh; background-position: top;
+  "
+  class="bg-mrkt"
+>
+  <p class="pl-md-4 pr-md-5 p-1 mgen text-right float-right text-white" style="background-color: rgba(0, 0, 0, 0.603)">
+     <strong
+        ><em
+           >"Bauhaus bir fikirdi. Onun dünyadaki tüm ilerici okullar üzerindeki büyük
+           etkisinin temelinde, onun bir fikir olma gerçeğinde yatmaktadır. Böyle bir
+           etkiye ne bir organizasyonla, ne de propagandayla ulaşılabilir. Yanlızca bir
+           fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar uyandırabilsin." -Ludwig Mies van der Rohe, 1957</em
+        ></strong
+     >
+  </p>
+</div>
 </div>
 <div class="container">
   <div class="row">
     <div class="col-md-6">
+  <h2 class="mt-md-3" id="bauhaus-zeminin-hazırlanması">Bauhaus Zeminin Hazırlanması</h2>
       <p>
         19. yüzyılın sonları 20. yüzyılın başlarında ortaya çıkan hızlı
-        teknolojik gelişmeler, savaşların ortaya çıkardığı yıkımlar, sanat ve
-        düşünce alanlarını etkilemiş yeni estetiksel arayışların ortaya
-        çıkmasına zemin hazırlamıştır. Bu dönemde sanat tartışmaları yoğunlaşmış
-        sanatın toplumsal yönü, sanatın işlevselliği sorgulanmaya başlanmıştır.
+        teknolojik gelişmeler, savaşların ortaya çıkardığı yıkımlar, sanat
+        ve düşünce alanlarını etkilemiş yeni estetik arayışların ortaya
+        çıkmasına zemin hazırlamıştır. Bu dönemde sanat tartışmaları
+        yoğunlaşmış sanatın toplumsal yönü, sanatın işlevselliği
+        sorgulanmaya başlanmıştır.
+      </p>
+      <p>
         İmparatorlukların parçalanması, krallıkların yok olması ve yerlerini
         yeni oluşumlara bırakmaları, sanat alanında da geleneksel kalıpların
         kırılarak yeni ve farklı tarz arayışları olarak değerlendirebileceğimiz
@@ -39,23 +62,31 @@ tags= [
         yayıldığını ve Paul Cezanne’la birlikte rotasını bulup ilerlediğini
         söyleyebiliriz. Cezanne 1901’de yapmış olduğu resimlerinde doğayı küp,
         silindir ve koni şeklinde geometrik parçalara ayırarak Kübizm akımının
-        öncülüğünü yapmıştır. Picasso ve Braque gibi sanatçılar da Cezanne’ın bu
-        anlayışını geliştirip devam ettirmişlerdir. Sanattaki gelişmeler bilimi
-        etkilemiş, bilimin getirmiş olduğu teknolojik gelişmeler de sanata ivme
-        kazandırmıştır.
+        öncülüğünü yapmıştır. Picasso ve Braque gibi sanatçılar da Cezanne’ın
+        bu anlayışını geliştirip devam ettirmişlerdir. Sanattaki gelişmeler
+        bilimi etkilemiş, bilimin getirmiş olduğu teknolojik gelişmeler de
+        sanata ivme kazandırmıştır.
       </p>
       <p>
         Kübist sanatçılar, doğa biçimlerini parçalayıp geometrik formlara
-        dönüştürerek soyutlamaya gitmişlerdir. Mondrian ise, Kübizmi soyut sanat
-        olarak değil soyutlayıcı sanat olarak adlandırmıştır. 20. yüzyılın ilk
-        otuz yılında, toplumda yaşanan olaylara ve kültürel değişimlere paralel
-        olarak Kübizm, Fovizm, Ekspresyonizm, Fütürizm, Dadaizm, Ready-Made,
-        Konstrüktüvizm ve Sürrealizm gibi sanat akımları ortaya çıkmıştır. Bu
-        dönemde yaşanan endüstri ve teknolojideki gelişmeler, estetik
-        biçimlemeye ihtiyaç duyulmasına neden olmuştur.
-      </p>
+        dönüştürerek soyutlamaya gitmişlerdir. Mondrian ise, Kübizmi soyut
+        sanat olarak değil soyutlayıcı sanat olarak adlandırmıştır. 20.
+        yüzyılın ilk otuz yılında, toplumda yaşanan olaylara ve kültürel
+        değişimlere paralel olarak Kübizm, Fovizm, Ekspresyonizm, Fütürizm,
+        Dadaizm, Ready-Made, Konstrüktüvizm ve Sürrealizm gibi sanat akımları
+        ortaya çıkmıştır. Bu dönemde yaşanan endüstri ve teknolojideki
+        gelişmeler, estetik biçimlemeye ihtiyaç duyulmasına neden olmuştur.
+     </p>
     </div>
+    <div class="col-md-6">         <img
+      src="/img/bauhaus-ekolu-cubism-abstract-art.jpg"
+      referrerpolicy="no-referrer"
+      alt="bauhaus-ekolu-cubism-abstract-art.jpg"
+   /></div>
+</div>
+<div class="row">
     <div class="col-md-6">
+      <h2 class="mt-md-3" id="bauhaus-okulunun-kuruluşu">Bauhaus Okulunun Kuruluşu</h2>
       <p>
         <strong
           >Birinci Dünya Savaşından sonra sanat eğitimini kökten etkileyen bir
@@ -333,6 +364,7 @@ tags= [
     fikrin böyle bir etki yapma gücü vardır ki, geniş yankılar uyandırabilsin.
     <strong> -Ludwig Mies van der Rohe, 1957 </strong>
   </blockquote>
+  <small>**Bu makalenin ilk hali Markut Sayı: 03, Kasım 2020'de Atahan Göktürk Güner tarafından hazırlanmıştır. Ekleme, çıkarma ve güncelleme yapılarak Sayı: 15'te Kasım 2021 sayısı Şahsenem Göksu Göktürk ile hazırlanmıştır.</small>
 
 
   <h5>Kaynaklar</h5>
