--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -1,5 +1,5 @@
 +++
-title="Reklam ve Sponsorluk"
+title="Dergiye Reklam Ver - Fiyat Listesi"
 seotitle = "Dergiye Reklam Ver Tanıtımını Yap - Fiyat Listesi"
 url = "reklam-sponsorluk/"
 description="Dergimize en uygun fiyatlarla reklam vermek ister misiniz? Markut, nitelikli içerikleriyle aylık olarak çıkmaktadır. Dergimize sponsor olarak fayda sağlayın."
@@ -16,6 +16,7 @@ type="page"
 <br>
 
 <h3>Arama Motorlarında Biz</h3>
+<small>Özenle hazırladığımız içerikler Google gibi arama motorlarında en üst sıralarda çıkmaktadır. İçeriklerin </small>
 <div class="row">
   <div class="col-md-6"><img src="/img/google-arama-endustriyel-tasarim-dergisi.png" alt="Google Arama Souçlarında Endüstriyel Tasarım Dergisi - Markut"></div>
   <div class="col-md-6"><img src="/img/google-arama-tasarimda-ergonomi.png" alt="Google Arama Souçlarında Tasarımda Ergonomi - Markut"></div>
@@ -32,7 +33,7 @@ type="page"
 
 <h3>Website Performansımız</h3>
 <h6>Google PageSpeed Oranları</h6>
-
+<small>Websitemiz okuyucuya en iyi şekilde hizmet vermesi için optimize edilmiştir. Bir saniye gibi kısa bir sürede sitemiz açılmaktadır.</small>
 <div class="row">
   <div class="col-md-6"><img src="/img/google-pagespeed-sayi-6.png" alt=""></div>
   <div class="col-md-6"><img src="/img/google-page-speed-sayi-6-masaustu.png" alt=""></div>
@@ -47,8 +48,8 @@ type="page"
 
 <hr>
 <h3>Ziyaretçi Sayımız</h3>
-<div class="text-center"><img src="/img/google-analytics-ziyaretci-raporu-markut.png" alt="Google Analytics Ziyaretçi Raporu - Markut">
-  <small>Tekil Ziyaretçi Sayısıdır.</small>
+<div class="text-center"><img src="/img/ekim-2021-90-gun-rapor.png" alt="Google Analytics Ziyaretçi Raporu - Markut">
+  <br><small>Tekil Ziyaretçi Sayısıdır. Aylık 2400+ Tekil Ziyaretçi (Ekim 2021 - 90 Günlük Rapor)</small>
 </div>
 
 <div class="row mt-6">
@@ -105,8 +106,8 @@ type="page"
 
 <br><br><br><br>
 
-<h4>Süreç İşleyişi</h4>
-<div class="row">
+<h3>Süreç İşleyişi</h3>
+<div class="row bg-light">
   <div class="col-md-4">1. Sponsorluk için form doldurulur.</div>
   <div class="col-md-4">2. Firmaya reklam alanıyla ilgili bilgilendirme gönderilir. Buna yönelik başvuru yapan kişinin mail adresine; ön izleme linkiyle beraber, ödeme adresi gönderilir.</div>
   <div class="col-md-4">3. Ödeme sonrası, reklam sitede yayınlanır.</div><br><br><br>
@@ -114,6 +115,7 @@ type="page"
 </div>
 <br><br><br>
 
+<h2>Reklam Fiyat Listesi</h2>
 <div class="row">
   <div class="col-md-6">
     <h3>A Reklam</h3>
