--- a/content/dergi/sayi-15/asd/index.html
+++ b/content/dergi/sayi-15/asd/index.html
@@ -46,7 +46,7 @@ tags= [
   <h3 class="mt-1">Atahan Göktürk Güner</h3>
   <div class="row">
     <div class="col-md-4">
-      {{<img src="atahan-gokturk-asd-yarismasi.jpg" alt="" >}}
+      <img src="https://www.markut.net/sayi-15/ambalaj-sanayicileri-dernegi-odul-toreni/atahan-gokturk-asd-yarismasi.jpg" alt="" >
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -72,7 +72,7 @@ tags= [
   <h3 class="mt-1">Kübra Nur Şahin</h3>
   <div class="row">
     <div class="col-md-4">
-      {{<img src="kubra-nur-sahin-asd-yarismasi.jpg" alt="" >}}
+      <img src="https://www.markut.net/sayi-15/ambalaj-sanayicileri-dernegi-odul-toreni/kubra-nur-sahin-asd-yarismasi.jpg" alt="" >
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -99,7 +99,7 @@ tags= [
   <h3 class="mt-1">Merve Çetin</h3>
   <div class="row">
     <div class="col-md-4">
-      {{<img src="merve-cetin-asd-yarismasi.jpg" alt="" >}}
+      <img src="https://www.markut.net/sayi-15/ambalaj-sanayicileri-dernegi-odul-toreni/merve-cetin-asd-yarismasi.jpg" alt="" >
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -107,7 +107,7 @@ tags= [
           {{<img src="merve-cetin-pafta-1.jpg" alt="" >}}
         </div>
         <div class="col-md-6">
-          {{<img src="merve-cetin-pafta-1.jpg" alt="" >}}
+          {{<img src="merve-cetin-pafta-2.jpg" alt="" >}}
         </div>
         <p>
           “Cutton” Tek Kullanımlık Pamuk Birimleri Ambalaj Tasarımı ile 17.
@@ -124,7 +124,7 @@ tags= [
   <h3 class="mt-1">Elif Ersöz</h3>
   <div class="row">
     <div class="col-md-4">
-      {{<img src="elif-ersoz-asd-yarismasi.jpg" alt="" >}}
+      <img src="https://www.markut.net/sayi-15/ambalaj-sanayicileri-dernegi-odul-toreni/elif-ersoz-asd-yarismasi.jpg" alt="" >
     </div>
     <div class="col-md-8">
       <div class="row">
@@ -150,7 +150,7 @@ tags= [
   <h3 class="mt-1">Zeynep Yarar</h3>
   <div class="row">
     <div class="col-md-4">
-      {{<img src="zeynep-yarar-asd-yarismasi.jpg" alt="" >}}
+      <img src="https://www.markut.net/sayi-15/ambalaj-sanayicileri-dernegi-odul-toreni/zeynep-yarar-asd-yarismasi.jpg" alt="" >
     </div>
     <div class="col-md-8">
       <div class="row">
