--- a/content/dergi/sayi-5/shakers/index.html
+++ b/content/dergi/sayi-5/shakers/index.html
@@ -9,7 +9,7 @@ thumb="/img/shakers-thumbnail.jpg"
 date = "2021-01-01"
 sayi=["05"]
 sayfa="02"
-yazar=["ecem hasbay"]
+konuk= "Ecem Hasbay"
 tags= ["dergi", "sanat akimi"]
 +++
 <div class="container">
