--- a/content/dergi/sayi-15/dutch-design/index.html
+++ b/content/dergi/sayi-15/dutch-design/index.html
@@ -4,7 +4,7 @@ url = "sayi-15/dutch-kavramsal-tasarimi/"
 date = "2021-12-11"
 description=""
 aciklama="Felemenk Tasarımı (Dutch Design) terimi Hollanda'daki tasarımcılar için ortak olan, özellikle ürün tasarımında, resmi olmayan sanatsal tasarım ekolünün tasarım estetiğini ifade eder. Dutch tasarım her şeyden önce fonksiyoneldir."
-thumb="/img/"
+thumb="/img/dutch-design-thumbnail.jpg"
 sayi=[
 "15"
 ]
