--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -1,11 +1,60 @@
 +++
-title="Dergiye Reklam Ver - Fiyat Listesi"
+title="Dergiye Reklam Ver"
 seotitle = "Dergiye Reklam Ver Tanıtımını Yap - Fiyat Listesi"
 url = "reklam-sponsorluk/"
 description="Dergimize en uygun fiyatlarla reklam vermek ister misiniz? Markut, nitelikli içerikleriyle aylık olarak çıkmaktadır. Dergimize sponsor olarak fayda sağlayın."
 type="page"
 +++
 
+<h2>Derginize Sponsor Olarak Reklam Vermek İstiyoruz</h2>
+<h4>Dilerseniz  <a href="mailto:bilgi@markut.net">bilgi@markut.net</a>  adresine mail atabilirsiniz</h4><br><br>
+<form class="form-horizontal" name="Reklam" method="POST" data-netlify="true" action="/basarili">
+     <fieldset>
+                  <div class="form-group row">
+                    <label for="name" class="col-3 col-form-label">Adınız Soyadınız</label> 
+                    <div class="col-9">
+                      <input id="name" name="name" type="text" class="form-control" placeholder="Ad Soyad" required="required">
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="mail" class="col-3 col-form-label">Mail Adresiniz</label> 
+                    <div class="col-9">
+                      <div class="input-group">
+                        <input id="mail" name="mail" type="mail" placeholder="Mail Adresiniz" class="form-control"> 
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="text" class="col-3 col-form-label">Firma Adı</label> 
+                    <div class="col-9">
+                      <div class="input-group">
+                        <input id="text" name="text" type="text" class="form-control" placeholder="Firma Adı" required="required"> 
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="web" class="col-3 col-form-label">Firma Web Adresi</label> 
+                    <div class="col-9">
+                      <div class="input-group">
+                        <input id="web" name="web" type="text" class="form-control" placeholder="Firma Web adresi. https://..." required="required"> 
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label for="mesaj" class="col-3 col-form-label">Eklemek İstediğiniz Mesaj</label> 
+                    <div class="col-9">
+                      <div class="input-group">
+                        <textarea id="mesaj" class="form-control" placeholder="Ekstra bir şey söylemek istiyorsanız doldurabilirsiniz." name="mesaj" rows="4"></textarea>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="offset-3 col-9">
+                      <button name="submit" type="submit" class="btn markutbtn">Gönder</button>
+                    </div>
+                  </div>
+     </fieldset>
+                </form>
 
 <h2>Neden MARKUT'a Reklam Vermelisiniz?</h2>
 <p>Dergimiz dijital olarak belli okuyucu kitlesine ulaşmış Türkiye’nin sayılı tasarım dergilerinden biri olup Endüstriyel Tasarım alanında içerik üreten dergidir. Her ayın 1’inde çıkardığımız dergide ücretsiz olarak içerik hizmeti veriyoruz. Yazılarımız arama motorları tarafından bulunabilmesi için optimize edilmiştir. Önceki sayılarımızda çıkan içerikler de yeni okuyucular tarafından okunmaktadır. Reklam vermeniz haline uzun süreli fayda göreceksiniz.</p>
@@ -48,8 +97,8 @@ type="page"
 
 <hr>
 <h3>Ziyaretçi Sayımız</h3>
-<div class="text-center"><img src="/img/ekim-2021-90-gun-rapor.png" alt="Google Analytics Ziyaretçi Raporu - Markut">
-  <br><small>Tekil Ziyaretçi Sayısıdır. Aylık 2400+ Tekil Ziyaretçi (Ekim 2021 - 90 Günlük Rapor)</small>
+<div class="text-center"><img src="/img/aralik-2021-90-gunluk-rapor.png" alt="Google Analytics Ziyaretçi Raporu - Markut">
+  <br><small>Tekil Ziyaretçi Sayısıdır. Aylık 3400+ Tekil Ziyaretçi (Aralık 2021 - 90 Günlük Rapor)</small>
 </div>
 
 <div class="row mt-6">
@@ -114,7 +163,7 @@ type="page"
  <div class="col-md-12"><small><br><br>Tüm süreç 24-36 saat içerisinde tamamlanmış olur. Reklam yayınlandığından itibaren 30|90 gün yayında kalır. Son 3 gün bilgilendirme gönderilerek uzatma veya kaldırma işlemi yapılır.</small></div>
 </div>
 <br><br><br>
-
+<!--
 <h2>Reklam Fiyat Listesi</h2>
 <div class="row">
   <div class="col-md-6">
@@ -163,9 +212,9 @@ type="page"
 <small class="text-muted">(%20 indirimli)</small>
   </div>
 </div>
-
+-->
 <br><br><br>
-<!-- A Reklam Alanı-->
+<!--
 <div class="container mt-6 markutreklam">
     <div class="row pt-md-3 pb-md-4 bg-sari mt-5">
       <div class="col-md-6"><a href="#"><img loading="lazy" class="img-fluid thumb" src="/img/markut-dergimizin-parcasi.jpg" alt="Markut Örnek Reklam Alanı Görselidir." width="700px" height="300px">
@@ -176,8 +225,8 @@ type="page"
      </div>
     </div>
 </div>
-<!-- A Reklam Alanı Bitiş-->
-
+-->
+<!--
 <h3>Derginize Sponsor Olarak Reklam Vermek İstiyorum</h3>
 <form class="form-horizontal" name="Reklam" method="POST" data-netlify="true" action="/basarili">
      <fieldset>
@@ -267,10 +316,11 @@ type="page"
                   </div>
      </fieldset>
                 </form>
-      
+      -->
+
+
       <div class="text-center mt-6">
         <h3>Markut Ekibinden Sevgiyle...</h3>
-        <h4>Aklınızda farklı bir sponsorluk seçeneği varsa bilgi@markut.net adresine mail atınız.</h4>
         <img src="/img/markut-puzzle-illustrasyon.svg" alt="Markut Dergi Yapboz İllustrasyonu">
         <small>İllustrasyon: Deniz Çam</small>
       </div>
