--- a/content/reklam-sponsorluk.html
+++ b/content/reklam-sponsorluk.html
@@ -4,6 +4,7 @@ seotitle = "Dergiye Reklam Ver Tanıtımını Yap - Fiyat Listesi"
 url = "reklam-sponsorluk/"
 description="Dergimize en uygun fiyatlarla reklam vermek ister misiniz? Markut, nitelikli içerikleriyle aylık olarak çıkmaktadır. Dergimize sponsor olarak fayda sağlayın."
 type="page"
+draft="true"
 +++
 
 <h2>Derginize Sponsor Olarak Reklam Vermek İstiyoruz</h2>
